--- a/pom.xml
+++ b/pom.xml
@@ -62,6 +62,13 @@
             <artifactId>cucumber-plugin</artifactId>
             <version>7.22.0</version>
         </dependency>
+
+        <!-- https://mvnrepository.com/artifact/io.qameta.allure/allure-cucumber7-jvm -->
+        <dependency>
+            <groupId>io.qameta.allure</groupId>
+            <artifactId>allure-cucumber7-jvm</artifactId>
+            <version>2.29.1</version>
+        </dependency>
     </dependencies>
 
     <build>
@@ -84,7 +91,7 @@
                     <includes>
                         <include>**/*Test.java</include>
                         <include>**/*Tests.java</include>
-                        <include>**/RunCucumber*.java</include>
+                        <include>**/cucumber*Runner*.java</include>
                     </includes>
                 </configuration>
             </plugin>
