--- a/pom.xml
+++ b/pom.xml
@@ -69,12 +69,7 @@
             <artifactId>allure-cucumber7-jvm</artifactId>
             <version>2.29.1</version>
         </dependency>
-        <dependency>
-            <groupId>org.testng</groupId>
-            <artifactId>testng</artifactId>
-            <version>7.11.0</version>
-            <scope>test</scope>
-        </dependency>
+        <!-- Зависимость TestNG указана один раз -->
         <dependency>
             <groupId>org.testng</groupId>
             <artifactId>testng</artifactId>
