--- a/pom.xml
+++ b/pom.xml
@@ -69,13 +69,13 @@
             <artifactId>allure-cucumber7-jvm</artifactId>
             <version>2.29.1</version>
         </dependency>
-        <!-- Зависимость TestNG указана один раз -->
-        <dependency>
-            <groupId>org.testng</groupId>
-            <artifactId>testng</artifactId>
-            <version>7.11.0</version>
-            <scope>test</scope>
-        </dependency>
+<!--        &lt;!&ndash; Зависимость TestNG указана один раз &ndash;&gt;-->
+<!--        <dependency>-->
+<!--            <groupId>org.testng</groupId>-->
+<!--            <artifactId>testng</artifactId>-->
+<!--            <version>7.11.0</version>-->
+<!--            <scope>test</scope>-->
+<!--        </dependency>-->
     </dependencies>
 
     <build>
