--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -1,6 +1,7 @@
 name: Java CI with Maven and Allure
 
 on:
+  workflow_dispatch:  # allow run workflow manually from GitHub interface
   push:
     branches: [ "main" ]
   pull_request:
