--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -31,10 +31,18 @@ jobs:
 
       - name: Install Chrome
         run: |
-          wget -q -O - https://dl-ssl.google.com/linux/linux_signing_key.pub | sudo apt-key add -
+         wget -q -O - https://dl-ssl.google.com/linux/linux_signing_key.pub | sudo apt-key add -
           echo "deb [arch=amd64] http://dl.google.com/linux/chrome/deb/ stable main" | sudo tee /etc/apt/sources.list.d/google.list
           sudo apt-get update
           sudo apt-get install -y google-chrome-stable
+
+      - name: Run Tests
+        run: |
+          export DISPLAY=:99
+          Xvfb :99 -screen 0 1280x1024x24 > /dev/null 2>&1 &
+          mvn clean test -Dselenide.headless=true
+          
+          
 
       - name: Build with Maven
         run: mvn -B package --file pom.xml
