--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -1,11 +1,65 @@
-name: Java CI with Maven and Allure
+name: GEM Tests CI/CD
 
 on:
-  workflow_dispatch:  # allow run workflow manually from GitHub interface
 #  push:
 #    branches: [ "main" ]
+#    paths:
+#      - 'src/**'
+#      - 'pom.xml'
+#      - '.github/workflows/**'
+#
 #  pull_request:
 #    branches: [ "main" ]
+  
+  workflow_dispatch:
+    inputs:
+      test_type:
+        description: 'Тип тестов'
+        required: true
+        type: choice
+        options:
+          - all
+          - smoke
+          - regression
+          - critical-only
+          - normal-only
+          - minor-only
+      
+      feature:
+        description: 'Функциональность'
+        required: true
+        type: choice
+        options:
+          - all
+          - LoginFeature
+          - MenuFeature
+      
+      story:
+        description: 'Пользовательский сценарий'
+        required: false
+        type: choice
+        options:
+          - all
+          - SuccessfulLogin
+          - UnsuccessfulLogin
+          - ValidationChecks
+          - ForgotPassword
+          - CheckSignUpButton
+          - CheckSideMenuButtonOptions
+      
+      execution_mode:
+        description: 'Режим выполнения'
+        required: true
+        type: choice
+        options:
+          - sequential
+          - parallel
+        default: 'sequential'
+      
+      custom_tags:
+        description: 'Пользовательские теги (будут добавлены к выбранным выше)'
+        required: false
+        type: string
 
 # Добавляем разрешения для GitHub Pages
 permissions:
@@ -14,9 +68,84 @@ permissions:
   id-token: write
 
 jobs:
-  build:
+  determine-test-matrix:
     runs-on: ubuntu-latest
+    outputs:
+      test_tags: ${{ steps.set-tags.outputs.test_tags }}
+      run_mode: ${{ steps.set-mode.outputs.run_mode }}
+    steps:
+      - id: set-tags
+        run: |
+          # Базовый тег
+          BASE_TAG=""
+          
+          # Настройка типа тестов
+          case "${{ github.event.inputs.test_type }}" in
+            smoke)
+              BASE_TAG="@smoke"
+              ;;
+            regression)
+              BASE_TAG="@regression"
+              ;;
+            critical-only)
+              BASE_TAG="@severity=critical"
+              ;;
+            normal-only)
+              BASE_TAG="@severity=normal"
+              ;;
+            minor-only)
+              BASE_TAG="@severity=minor"
+              ;;
+            all|*)
+              BASE_TAG="@regression or @smoke"
+              ;;
+          esac
+          
+          # Добавление фильтра по функциональности
+          if [[ "${{ github.event.inputs.feature }}" != "all" && "${{ github.event.inputs.feature }}" != "" ]]; then
+            FEATURE_TAG="@feature=${{ github.event.inputs.feature }}"
+            if [[ -n "$BASE_TAG" ]]; then
+              BASE_TAG="$BASE_TAG and $FEATURE_TAG"
+            else
+              BASE_TAG="$FEATURE_TAG"
+            fi
+          fi
+          
+          # Добавление фильтра по пользовательскому сценарию
+          if [[ "${{ github.event.inputs.story }}" != "all" && "${{ github.event.inputs.story }}" != "" ]]; then
+            STORY_TAG="@story=${{ github.event.inputs.story }}"
+            if [[ -n "$BASE_TAG" ]]; then
+              BASE_TAG="$BASE_TAG and $STORY_TAG"
+            else
+              BASE_TAG="$STORY_TAG"
+            fi
+          fi
+          
+          # Добавление пользовательских тегов
+          if [[ -n "${{ github.event.inputs.custom_tags }}" ]]; then
+            if [[ -n "$BASE_TAG" ]]; then
+              BASE_TAG="$BASE_TAG and (${{ github.event.inputs.custom_tags }})"
+            else
+              BASE_TAG="${{ github.event.inputs.custom_tags }}"
+            fi
+          fi
+          
+          echo "test_tags=$BASE_TAG" >> $GITHUB_OUTPUT
+          echo "Выбранные теги для тестов: $BASE_TAG"
+          
+      - id: set-mode
+        run: |
+          # Если запуск не из workflow_dispatch или параметр не указан, использовать sequential
+          if [[ "${{ github.event_name }}" != "workflow_dispatch" || "${{ github.event.inputs.execution_mode }}" == "" ]]; then
+            echo "run_mode=sequential" >> $GITHUB_OUTPUT
+          else
+            echo "run_mode=${{ github.event.inputs.execution_mode }}" >> $GITHUB_OUTPUT
+          fi
 
+  test-sequential:
+    needs: determine-test-matrix
+    if: needs.determine-test-matrix.outputs.run_mode == 'sequential'
+    runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
         with:
@@ -31,24 +160,23 @@ jobs:
 
       - name: Install Chrome
         run: |
-         wget -q -O - https://dl-ssl.google.com/linux/linux_signing_key.pub | sudo apt-key add -
+          wget -q -O - https://dl-ssl.google.com/linux/linux_signing_key.pub | sudo apt-key add -
           echo "deb [arch=amd64] http://dl.google.com/linux/chrome/deb/ stable main" | sudo tee /etc/apt/sources.list.d/google.list
           sudo apt-get update
           sudo apt-get install -y google-chrome-stable
 
-#      - name: Run Tests
-#        run: |
-#          export DISPLAY=:99
-#          Xvfb :99 -screen 0 1280x1024x24 > /dev/null 2>&1 &
-#          mvn clean test -Dselenide.headless=true
-          
-          
-
-      - name: Build with Maven
-        run: mvn -B package --file pom.xml
+      - name: Set up display
+        run: |
+          export DISPLAY=:99
+          Xvfb :99 -screen 0 1280x1024x24 > /dev/null 2>&1 &
 
       - name: Run Tests
-        run: mvn clean test
+        run: |
+          if [[ -n "${{ needs.determine-test-matrix.outputs.test_tags }}" ]]; then
+            mvn clean test -Dselenide.headless=true -Dcucumber.filter.tags="${{ needs.determine-test-matrix.outputs.test_tags }}"
+          else
+            mvn clean test -Dselenide.headless=true
+          fi
 
       - name: Get Allure history
         uses: actions/checkout@v3
@@ -66,6 +194,116 @@ jobs:
           allure_history: allure-history
           keep_reports: 20
 
+      - name: Deploy report to GitHub Pages
+        if: always()
+        uses: peaceiris/actions-gh-pages@v3
+        with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          publish_branch: gh-pages
+          publish_dir: ./allure-history
+
+  test-parallel:
+    needs: determine-test-matrix
+    if: needs.determine-test-matrix.outputs.run_mode == 'parallel'
+    runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        feature: [LoginFeature, MenuFeature]
+        include:
+          - feature: LoginFeature
+            display-name: "Login Tests"
+          - feature: MenuFeature
+            display-name: "Menu Tests"
+      fail-fast: false
+    
+    name: ${{ matrix.display-name }}
+    steps:
+      - uses: actions/checkout@v3
+        with:
+          fetch-depth: 0  # Важно для корректной работы с историей
+
+      - name: Set up JDK 17
+        uses: actions/setup-java@v3
+        with:
+          java-version: '17'
+          distribution: 'temurin'
+          cache: maven
+
+      - name: Install Chrome
+        run: |
+          wget -q -O - https://dl-ssl.google.com/linux/linux_signing_key.pub | sudo apt-key add -
+          echo "deb [arch=amd64] http://dl.google.com/linux/chrome/deb/ stable main" | sudo tee /etc/apt/sources.list.d/google.list
+          sudo apt-get update
+          sudo apt-get install -y google-chrome-stable
+
+      - name: Set up display
+        run: |
+          export DISPLAY=:99
+          Xvfb :99 -screen 0 1280x1024x24 > /dev/null 2>&1 &
+
+      - name: Prepare test tags
+        id: prepare-tags
+        run: |
+          BASE_TAGS="${{ needs.determine-test-matrix.outputs.test_tags }}"
+          FEATURE_TAG="@feature=${{ matrix.feature }}"
+          
+          if [[ -n "$BASE_TAGS" ]]; then
+            FINAL_TAGS="$BASE_TAGS and $FEATURE_TAG"
+          else
+            FINAL_TAGS="$FEATURE_TAG"
+          fi
+          
+          echo "final_tags=$FINAL_TAGS" >> $GITHUB_ENV
+          echo "Итоговые теги для запуска: $FINAL_TAGS"
+
+      - name: Run Cucumber tests for ${{ matrix.feature }}
+        run: mvn clean test -Dselenide.headless=true -Dcucumber.filter.tags="${{ env.final_tags }}"
+
+      - name: Generate Allure Report for ${{ matrix.feature }}
+        uses: simple-elf/allure-report-action@master
+        if: always()
+        with:
+          allure_results: target/allure-results
+          allure_report: allure-report-${{ matrix.feature }}
+          allure_history: allure-history/${{ matrix.feature }}
+          keep_reports: 20
+
+      - name: Upload Artifacts
+        uses: actions/upload-artifact@v3
+        if: always()
+        with:
+          name: allure-report-${{ matrix.feature }}
+          path: allure-report-${{ matrix.feature }}
+          retention-days: 14
+
+  merge-reports:
+    needs: test-parallel
+    if: always() && needs.determine-test-matrix.outputs.run_mode == 'parallel'
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v3
+      
+      - name: Download all artifacts
+        uses: actions/download-artifact@v3
+        with:
+          path: allure-reports
+      
+      - name: Get Allure history
+        uses: actions/checkout@v3
+        if: always()
+        continue-on-error: true
+        with:
+          ref: gh-pages
+          path: gh-pages
+      
+      - name: Generate combined Allure Report
+        uses: simple-elf/allure-report-action@master
+        if: always()
+        with:
+          allure_results: allure-reports
+          allure_history: allure-history
+          keep_reports: 20
+      
       - name: Deploy report to GitHub Pages
         if: always()
         uses: peaceiris/actions-gh-pages@v3
