--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -169,6 +169,11 @@ jobs:
         run: |
           export DISPLAY=:99
           Xvfb :99 -screen 0 1280x1024x24 > /dev/null 2>&1 &
+          
+      - name: Clear previous Allure results
+        run: |
+          rm -rf target/allure-results/* || true
+          echo "Предыдущие результаты Allure очищены"
 
       - name: Run Tests
         run: |
@@ -193,6 +198,7 @@ jobs:
           allure_results: target/allure-results
           allure_history: allure-history
           keep_reports: 20
+          clean_allure_results: true
 
       - name: Deploy report to GitHub Pages
         if: always()
@@ -240,6 +246,11 @@ jobs:
         run: |
           export DISPLAY=:99
           Xvfb :99 -screen 0 1280x1024x24 > /dev/null 2>&1 &
+          
+      - name: Clear previous Allure results
+        run: |
+          rm -rf target/allure-results/* || true
+          echo "Предыдущие результаты Allure очищены для ${{ matrix.feature }}"
 
       - name: Prepare test tags
         id: prepare-tags
@@ -267,6 +278,7 @@ jobs:
           allure_report: allure-report-${{ matrix.feature }}
           allure_history: allure-history/${{ matrix.feature }}
           keep_reports: 20
+          clean_allure_results: true
 
       - name: Upload Artifacts
         uses: actions/upload-artifact@v3
@@ -303,6 +315,7 @@ jobs:
           allure_results: allure-reports
           allure_history: allure-history
           keep_reports: 20
+          clean_allure_results: true
       
       - name: Deploy report to GitHub Pages
         if: always()
