--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -172,6 +172,7 @@ jobs:
           
       - name: Clear previous Allure results
         run: |
+          mkdir -p target/allure-results
           rm -rf target/allure-results/* || true
           echo "Предыдущие результаты Allure очищены"
 
@@ -198,7 +199,7 @@ jobs:
           allure_results: target/allure-results
           allure_history: allure-history
           keep_reports: 20
-          clean_allure_results: true
+
 
       - name: Deploy report to GitHub Pages
         if: always()
@@ -249,6 +250,7 @@ jobs:
           
       - name: Clear previous Allure results
         run: |
+          mkdir -p target/allure-results
           rm -rf target/allure-results/* || true
           echo "Предыдущие результаты Allure очищены для ${{ matrix.feature }}"
 
@@ -278,10 +280,10 @@ jobs:
           allure_report: allure-report-${{ matrix.feature }}
           allure_history: allure-history/${{ matrix.feature }}
           keep_reports: 20
-          clean_allure_results: true
+
 
       - name: Upload Artifacts
-        uses: actions/upload-artifact@v3
+        uses: actions/upload-artifact@v2
         if: always()
         with:
           name: allure-report-${{ matrix.feature }}
@@ -296,7 +298,7 @@ jobs:
       - uses: actions/checkout@v3
       
       - name: Download all artifacts
-        uses: actions/download-artifact@v3
+        uses: actions/download-artifact@v2
         with:
           path: allure-reports
       
@@ -315,7 +317,7 @@ jobs:
           allure_results: allure-reports
           allure_history: allure-history
           keep_reports: 20
-          clean_allure_results: true
+
       
       - name: Deploy report to GitHub Pages
         if: always()
