--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -1,16 +1,16 @@
 name: GEM Tests CI/CD
 
 on:
-#  push:
-#    branches: [ "main" ]
-#    paths:
-#      - 'src/**'
-#      - 'pom.xml'
-#      - '.github/workflows/**'
-#
-#  pull_request:
-#    branches: [ "main" ]
-  
+  #  push:
+  #    branches: [ "main" ]
+  #    paths:
+  #      - 'src/**'
+  #      - 'pom.xml'
+  #      - '.github/workflows/**'
+  #
+  #  pull_request:
+  #    branches: [ "main" ]
+
   workflow_dispatch:
     inputs:
       test_type:
@@ -24,7 +24,7 @@ on:
           - critical-only
           - normal-only
           - minor-only
-      
+
       feature:
         description: 'Функциональность'
         required: true
@@ -33,7 +33,7 @@ on:
           - all
           - LoginFeature
           - MenuFeature
-      
+
       story:
         description: 'Пользовательский сценарий'
         required: false
@@ -46,7 +46,7 @@ on:
           - ForgotPassword
           - CheckSignUpButton
           - CheckSideMenuButtonOptions
-      
+
       execution_mode:
         description: 'Режим выполнения'
         required: true
@@ -55,7 +55,7 @@ on:
           - sequential
           - parallel
         default: 'sequential'
-      
+
       custom_tags:
         description: 'Пользовательские теги (будут добавлены к выбранным выше)'
         required: false
@@ -78,7 +78,7 @@ jobs:
         run: |
           # Базовый тег
           BASE_TAG=""
-          
+
           # Настройка типа тестов
           case "${{ github.event.inputs.test_type }}" in
             smoke)
@@ -100,39 +100,51 @@ jobs:
               BASE_TAG="@regression or @smoke"
               ;;
           esac
-          
+
           # Добавление фильтра по функциональности
           if [[ "${{ github.event.inputs.feature }}" != "all" && "${{ github.event.inputs.feature }}" != "" ]]; then
             FEATURE_TAG="@feature=${{ github.event.inputs.feature }}"
             if [[ -n "$BASE_TAG" ]]; then
-              BASE_TAG="$BASE_TAG and $FEATURE_TAG"
+              BASE_TAG="($BASE_TAG) and $FEATURE_TAG"
             else
               BASE_TAG="$FEATURE_TAG"
             fi
           fi
-          
+
           # Добавление фильтра по пользовательскому сценарию
           if [[ "${{ github.event.inputs.story }}" != "all" && "${{ github.event.inputs.story }}" != "" ]]; then
             STORY_TAG="@story=${{ github.event.inputs.story }}"
             if [[ -n "$BASE_TAG" ]]; then
-              BASE_TAG="$BASE_TAG and $STORY_TAG"
+              BASE_TAG="($BASE_TAG) and $STORY_TAG"
             else
               BASE_TAG="$STORY_TAG"
             fi
           fi
-          
+
           # Добавление пользовательских тегов
           if [[ -n "${{ github.event.inputs.custom_tags }}" ]]; then
             if [[ -n "$BASE_TAG" ]]; then
-              BASE_TAG="$BASE_TAG and (${{ github.event.inputs.custom_tags }})"
+              BASE_TAG="($BASE_TAG) and (${{ github.event.inputs.custom_tags }})"
             else
               BASE_TAG="${{ github.event.inputs.custom_tags }}"
             fi
           fi
-          
+
+          # Вывод для отладки
+          echo "Теги для фильтрации тестов: $BASE_TAG"
+
+          # Явно указываем только feature
+          if [[ "${{ github.event.inputs.feature }}" == "LoginFeature" ]]; then
+            BASE_TAG="@feature=LoginFeature"
+            echo "Установлены теги только для LoginFeature"
+          elif [[ "${{ github.event.inputs.feature }}" == "MenuFeature" ]]; then
+            BASE_TAG="@feature=MenuFeature"
+            echo "Установлены теги только для MenuFeature"
+          fi
+
           echo "test_tags=$BASE_TAG" >> $GITHUB_OUTPUT
-          echo "Выбранные теги для тестов: $BASE_TAG"
-          
+          echo "Финальные теги для тестов: $BASE_TAG"
+
       - id: set-mode
         run: |
           # Если запуск не из workflow_dispatch или параметр не указан, использовать sequential
@@ -169,16 +181,22 @@ jobs:
         run: |
           export DISPLAY=:99
           Xvfb :99 -screen 0 1280x1024x24 > /dev/null 2>&1 &
-          
+
       - name: Clear previous Allure results
         run: |
+          mkdir -p target/allure-results
           rm -rf target/allure-results/* || true
           echo "Предыдущие результаты Allure очищены"
 
       - name: Run Tests
         run: |
           if [[ -n "${{ needs.determine-test-matrix.outputs.test_tags }}" ]]; then
-            mvn clean test -Dselenide.headless=true -Dcucumber.filter.tags="${{ needs.determine-test-matrix.outputs.test_tags }}"
+            echo "Запуск тестов с тегами: ${{ needs.determine-test-matrix.outputs.test_tags }}"
+            # Экранируем кавычки для правильной передачи в Maven
+            TAGS="${{ needs.determine-test-matrix.outputs.test_tags }}"
+            # Заменяем кавычки на экранированные кавычки для Maven
+            TAGS="${TAGS//\"/\\\"}"
+            mvn clean test -Dselenide.headless=true -Dcucumber.filter.tags="$TAGS"
           else
             mvn clean test -Dselenide.headless=true
           fi
@@ -198,7 +216,6 @@ jobs:
           allure_results: target/allure-results
           allure_history: allure-history
           keep_reports: 20
-          clean_allure_results: true
 
       - name: Deploy report to GitHub Pages
         if: always()
@@ -214,14 +231,14 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        feature: [LoginFeature, MenuFeature]
+        feature: [ LoginFeature, MenuFeature ]
         include:
           - feature: LoginFeature
             display-name: "Login Tests"
           - feature: MenuFeature
             display-name: "Menu Tests"
       fail-fast: false
-    
+
     name: ${{ matrix.display-name }}
     steps:
       - uses: actions/checkout@v3
@@ -246,29 +263,38 @@ jobs:
         run: |
           export DISPLAY=:99
           Xvfb :99 -screen 0 1280x1024x24 > /dev/null 2>&1 &
-          
+
       - name: Clear previous Allure results
         run: |
+          mkdir -p target/allure-results
           rm -rf target/allure-results/* || true
           echo "Предыдущие результаты Allure очищены для ${{ matrix.feature }}"
 
       - name: Prepare test tags
         id: prepare-tags
         run: |
-          BASE_TAGS="${{ needs.determine-test-matrix.outputs.test_tags }}"
-          FEATURE_TAG="@feature=${{ matrix.feature }}"
-          
-          if [[ -n "$BASE_TAGS" ]]; then
-            FINAL_TAGS="$BASE_TAGS and $FEATURE_TAG"
-          else
-            FINAL_TAGS="$FEATURE_TAG"
-          fi
-          
+          # Простой подход - используем только тег feature
+          FINAL_TAGS="@feature=${{ matrix.feature }}"
           echo "final_tags=$FINAL_TAGS" >> $GITHUB_ENV
           echo "Итоговые теги для запуска: $FINAL_TAGS"
 
       - name: Run Cucumber tests for ${{ matrix.feature }}
-        run: mvn clean test -Dselenide.headless=true -Dcucumber.filter.tags="${{ env.final_tags }}"
+        run: |
+          echo "Запуск тестов с тегами: ${{ env.final_tags }}"
+          # Для Login и Menu Features используем прямой подход запуска
+          if [[ "${{ matrix.feature }}" == "LoginFeature" ]]; then
+            echo "Запуск только тестов логина с прямым указанием пути к feature файлу"
+            mvn clean test -Dselenide.headless=true -Dcucumber.features="src/test/resources/features/login.feature"
+          elif [[ "${{ matrix.feature }}" == "MenuFeature" ]]; then
+            echo "Запуск только тестов меню с прямым указанием пути к feature файлу"
+            mvn clean test -Dselenide.headless=true -Dcucumber.features="src/test/resources/features/menu.feature"
+          else
+            # Экранируем кавычки для правильной передачи в Maven
+            TAGS="${{ env.final_tags }}"
+            # Заменяем кавычки на экранированные кавычки для Maven
+            TAGS="${TAGS//\"/\\\"}"
+            mvn clean test -Dselenide.headless=true -Dcucumber.filter.tags="$TAGS"
+          fi
 
       - name: Generate Allure Report for ${{ matrix.feature }}
         uses: simple-elf/allure-report-action@master
@@ -278,10 +304,9 @@ jobs:
           allure_report: allure-report-${{ matrix.feature }}
           allure_history: allure-history/${{ matrix.feature }}
           keep_reports: 20
-          clean_allure_results: true
 
       - name: Upload Artifacts
-        uses: actions/upload-artifact@v3
+        uses: actions/upload-artifact@v2
         if: always()
         with:
           name: allure-report-${{ matrix.feature }}
@@ -294,12 +319,12 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
-      
+
       - name: Download all artifacts
-        uses: actions/download-artifact@v3
+        uses: actions/download-artifact@v2
         with:
           path: allure-reports
-      
+
       - name: Get Allure history
         uses: actions/checkout@v3
         if: always()
@@ -307,16 +332,21 @@ jobs:
         with:
           ref: gh-pages
           path: gh-pages
-      
+
+      - name: Create combined results directory
+        run: |
+          mkdir -p combined-results
+          find allure-reports -type f -exec cp {} combined-results/ \; || true
+          ls -la combined-results/ || true
+
       - name: Generate combined Allure Report
         uses: simple-elf/allure-report-action@master
         if: always()
         with:
-          allure_results: allure-reports
+          allure_results: combined-results
           allure_history: allure-history
           keep_reports: 20
-          clean_allure_results: true
-      
+
       - name: Deploy report to GitHub Pages
         if: always()
         uses: peaceiris/actions-gh-pages@v3
